# mousecam

./: .gitignore  README.md
adns9800/: bigtable.txt  encrypt_rom.c  ports.txt  timings.txt  undoc_ext_ports.txt  xdata.txt
mouse_uc/: mouse_proto.txt  mouse_timing.txt  t3_dump.c  t3_upload_rom.c
mousecam/: Cargo.toml  Makefile
mousecam/ang/: Makefile  canon_buffman.a51  huff_table.a51  loader.a51  main.a51
mousecam/src/: huffman.rs  main.rs
